# left_outer_join_array_agg_repro

./: .env  Cargo.toml  README.md
migrations/2023-02-05-165906_initial/: down.sql  up.sql
src/: main.rs  schema.rs
